# recsys-serving

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  environment.yml  log  main.py  pyproject.toml  server.py
.github/workflows/: ci.yml  deploy-homeserver.yml  deploy.yml
app/: main.py
app/api/: __init__.py  admin.py  health.py  recommend.py
app/api/recommend/: controller.py  fallback.py  feedback.py  schema.py  service.py  utils.py
app/api/search/: controller.py  dependencies.py  embedder.py  main.py  qdrant_searcher.py  requirements.txt  schema.py  service.py
app/core/: __init__.py  auth.py  config.py
app/db/: __init__.py  conn.py  dependencies.py  dynamo_conn.py  rds_conn.py
app/middleware/: request_logger.py
app/models/: __init__.py  article.py  article_bookmark.py  article_like.py  article_share.py  article_uninterest.py  blog.py  blog_subscribe.py  interest.py  member.py  member_interest.py  member_last_seen_feed.py  oauth.py  recommendation.py  request_log.py
app/services/: bandit.py  drift.py  drift_reference.npz  embedder.py  embedding_cache.py  hybrid_search.py  impression_logger.py  popular_queries.py  qdrant_client.py  query_understanding.py  redis_client.py  reranker.py  user_vector_lookup.py
scripts/: build_drift_reference.py  download_qu_llm.py  eval_search.py  export_query_encoder.py  export_reranker.py
tests/: test_drift.py  test_embedding_cache.py  test_hybrid_search.py  test_popular_queries.py  test_qdrant_filters.py  test_query_understanding.py  test_search_service.py
