[project]
name = "recsys-serving"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.96",
    "cachetools>=7.0.6",
    "cryptography>=47.0.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-text-splitters>=1.1.2",
    "llama-cpp-python>=0.3.20",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "transformers>=4.49,<5.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "optimum[exporters,onnxruntime]>=1.24",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "sentence-transformers>=5.4.1",
]
